# med_roster

./: LICENSE  README.md
documents/: constraints.md  tutorial-1-rostering-system.md
med_roster/: .gitignore  app.py  doctor.py  google_nurse.py  main.py  pyproject.toml  requests.py  roster.py  routes.py  schemas.py  solver.py  upload.py
med_roster/.github/workflows/: python-tests.yml
med_roster/constraints/: med_constraints.py  nurse_constraints.py
med_roster/db/: models.py  schema.sql
