[project]
name = "med_roster"
version = "0.1.0"
description = "Medical and nursing scheduling assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.dev-dependencies]
pytest = "^8.0.0"
ruff = "^0.3.0"

# --- RUFF CONFIGURATION ---
[tool.ruff]
# Target Python version
target-version = "py312"
# Set the line length limit (standard is 88 or 120)
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (F) and flake8 (E, W) codes by default.
# 'I' enables automatic import sorting (like isort)
select = ["E", "F", "W", "I"]
ignore = []

# --- PYTEST CONFIGURATION ---
[tool.pytest.ini_options]
# Tell pytest where to look for tests
testpaths = ["tests"]