[project]
name = "med_roster"
version = "0.1.0"
description = "Medical and nursing scheduling assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "openpyxl>=3.1.5",
    "ortools>=9.15.6755",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]


# --- RUFF CONFIGURATION ---
[tool.ruff]
# Target Python version
target-version = "py312"
# Set the line length limit (standard is 88 or 120)
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (F) and flake8 (E, W) codes by default.
# 'I' enables automatic import sorting (like isort)
select = ["E", "F", "W", "I"]
ignore = []

# --- PYTEST CONFIGURATION ---
[tool.pytest.ini_options]
# Tell pytest where to look for tests
testpaths = ["tests"]
